# quantar-testnet

./: .gitignore  Cargo.toml  README.md  testnet.html
crates/qtrc-chain/: Cargo.toml
crates/qtrc-chain/src/: lib.rs
crates/qtrc-common/: Cargo.toml
crates/qtrc-common/src/: block.rs  genesis.rs  lib.rs  state.rs  tx.rs
crates/qtrc-consensus/: Cargo.toml
crates/qtrc-consensus/src/: adapter.rs  lib.rs
crates/qtrc-crypto/: Cargo.toml
crates/qtrc-crypto/src/: lib.rs
crates/qtrc-faucet/: Cargo.toml
crates/qtrc-faucet/src/: main.rs
crates/qtrc-node/: Cargo.toml
crates/qtrc-node/src/: main.rs  rpc.rs  store.rs
