[workspace]
resolver = "2"
members = [
    "crates/qtrc-crypto",
    "crates/qtrc-common",
    "crates/qtrc-chain",
    "crates/qtrc-consensus",
    "crates/qtrc-node",
    "crates/qtrc-faucet",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Jefferson Buiar <contact@quantarnetwork.com>"]
license     = "MIT"
repository  = "https://github.com/quantarsite/quantar-testnet"

[workspace.dependencies]
# Post-quantum crypto (HYDRA-X)
pqcrypto-dilithium  = "0.5"      # Dilithium5 = ML-DSA-87 (FIPS 204)
pqcrypto-sphincsplus = "0.7"     # SPHINCS+-SHA2-256s = SLH-DSA (FIPS 205)
pqcrypto-traits     = "0.3"
serde_bytes = "0.11"

# Async runtime
tokio  = { version = "1", features = ["full"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bincode     = "1"
hex         = { version = "0.4", features = ["serde"] }

# Hashing
sha3    = "0.10"
digest  = "0.10"

# HTTP (RPC + faucet)
axum            = "0.7"
tower           = "0.4"
tower-http      = { version = "0.5", features = ["cors", "trace"] }

# Storage
sled = "0.34"

# CLI
clap    = { version = "4", features = ["derive"] }

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes      = "1"

# Utilities
thiserror   = "1"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand        = "0.8"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4", "serde"] }
dashmap     = "5"
parking_lot = "0.12"
