[package]
name        = "qtrc-chain"
description = "Chain indexing and block persistence"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
qtrc-crypto.path     = "../qtrc-crypto"
qtrc-common.path     = "../qtrc-common"
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
sled.workspace       = true
anyhow.workspace     = true
