[package]
name        = "qtrc-common"
description = "Shared types: Block, Transaction, ChainState"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
qtrc-crypto  = { path = "../qtrc-crypto" }
serde.workspace      = true
serde_json.workspace = true
sha3.workspace       = true
digest.workspace     = true
hex.workspace        = true
thiserror.workspace  = true
chrono.workspace     = true
serde_bytes = "0.11"
