[package]
name        = "qtrc-crypto"
description = "HYDRA-X: AND-composed ML-DSA-87 + SLH-DSA post-quantum signatures"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
pqcrypto-dilithium.workspace   = true
pqcrypto-sphincsplus.workspace = true
pqcrypto-traits.workspace      = true
blake3.workspace  = true
serde.workspace   = true
hex.workspace     = true
thiserror.workspace = true
rand.workspace    = true
zeroize = { version = "1", features = ["derive"] }
serde_bytes.workspace = true
