[package]
name        = "qtrc-node"
description = "Quantar Network testnet node"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "qtrc-node"
path = "src/main.rs"

[dependencies]
qtrc-crypto.path      = "../qtrc-crypto"
qtrc-common.path      = "../qtrc-common"
qtrc-consensus.path   = "../qtrc-consensus"

tokio.workspace          = true
serde.workspace          = true
serde_json.workspace     = true
axum.workspace           = true
tower-http.workspace     = true
thiserror.workspace      = true
tracing.workspace        = true
tracing-subscriber.workspace = true
clap.workspace           = true
chrono.workspace         = true
parking_lot.workspace    = true
anyhow.workspace         = true
hex.workspace            = true
sled.workspace           = true
tokio-util.workspace     = true
bytes.workspace          = true
